deployment/kubernetes/core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-deployment
  labels:
    app: core
spec:
  replicas: 2
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: registry.digitalocean.com/firebrick/core:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  selector:
    app: core
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
