deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
    # - host: yourdomain.com
    - http:
        paths:
          # Route "/" to the UI Service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 3000
